# SystemMonitor

./: CMakeLists.txt  README.md
include/: format.h  linux_parser.h  ncurses_display.h  process.h  processor.h  system.h
src/: format.cpp  linux_parser.cpp  main.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
